# ChillCleanBot

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
Database/: database_utils.py
Functionalities/: AddNewUser.py  DeleteExistingUser.py  SetRealName.py  ShowRules.py  authentication.py
Menu/: main_menu.py
Texts/: rules.txt  rules_of_cleaning.txt  welcome_text.txt
